--- a/client/notepal/package.json
+++ b/client/notepal/package.json
@@ -13,8 +13,10 @@
     "@radix-ui/colors": "^1.0.0",
     "@radix-ui/react-form": "^0.0.3",
     "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.13.0"
