--- a/client/notepal/package.json
+++ b/client/notepal/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^1.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-form": "^0.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.4.0",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
