--- a/api/package.json
+++ b/api/package.json
@@ -14,12 +14,23 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
-    "jsonwebtoken": "^9.0.0",
+    "express-session": "^1.17.3",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.2.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
-    "path": "^0.12.7"
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-facebook-token": "^4.0.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
+    "path": "^0.12.7",
+    "session-file-store": "^1.5.0"
   }
 }
