--- a/client/notepal/package.json
+++ b/client/notepal/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@radix-ui/colors": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-form": "^0.0.3",
